- ShelfViewの細かいバグを修正

--- a/Sheffle/Sheffle-Info.plist
+++ b/Sheffle/Sheffle-Info.plist
@@ -51,6 +51,8 @@
 	</array>
 	<key>UIStatusBarHidden</key>
 	<false/>
+	<key>UIStatusBarStyle</key>
+	<string>UIStatusBarStyleBlackTranslucent</string>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
